fixed stretching of the main

--- a/dev/scss/layout/_blog.scss
+++ b/dev/scss/layout/_blog.scss
@@ -1,6 +1,11 @@
 @use "abstract/variables" as *;
 @use "abstract/mixins" as *;
 
+main {
+    max-width: 1250px;
+margin: 0 auto;
+}
+
 .gallery {
     display: flex;
     flex-direction: column;
